prevent infinite loop if ContactInfo is not implemented

https://bugzilla.gnome.org/show_bug.cgi?id=709677